<resources>
    <string name="app_name">Magic Cards</string>
    <string name="btn_nav_add">Add</string>
    <string name="btn_nav_logout">Logout</string>
    <string name="btn_back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_card">AddCardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="ex_draw_3_cards">ex: Draw 3 cards</string>
    <string name="description">Description</string>
    <string name="ex_leroy_jenkins">ex: Leroy Jenkins</string>
    <string name="title">Title</string>
    <string name="stars">Stars</string>
    <string name="_7">7</string>
    <string name="rare">Rare</string>
    <string name="photo">Photo</string>
    <string name="update">Update</string>
    <string name="title_activity_login">Magic Cards Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >2 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>