<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cards.feature.AddCardActivity">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
            android:onClick="goBack"/>


        <LinearLayout
            android:id="@+id/ll_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="vertical">
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:padding="10dp"
                android:text="@string/title"/>
                <EditText
                    android:id="@+id/et_title"
                    android:hint="@string/ex_leroy_jenkins"
                    android:textColor="#6bfff7"
                    android:textColorHint="#52afaa"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:text="@string/description"/>
                <EditText
                    android:id="@+id/et_description"
                    android:hint="@string/ex_draw_3_cards"
                    android:textColor="#6bfff7"
                    android:textColorHint="#52afaa"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:text="@string/stars"/>
                <EditText
                    android:id="@+id/et_stars"
                    android:inputType="number"
                    android:maxLength="1"
                    android:hint="@string/_7"
                    android:textColor="#6bfff7"
                    android:textColorHint="#52afaa"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"/>
                <CheckBox
                    android:id="@+id/cb_rare"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rare"/>
                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"/>
                <ImageView
                    android:id="@+id/image_view_camera"
                    android:layout_height="150dp"
                    android:layout_width="150dp" />
                <Button
                    android:id="@+id/btn_add"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    android:id="@+id/add_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"/>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>